# cargo-odra

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile  rustfmt.toml
.github/workflows/: ci-cargo-odra.yml
src/: actions.rs  backend.rs  builder.rs  cargo_toml.rs  clean.rs  cli.rs  command.rs  consts.rs  errors.rs  generate.rs  init.rs  lib.rs  log.rs  main.rs  odra_dependency.rs  odra_toml.rs  paths.rs  project.rs  template.rs  tests.rs  update.rs
src/actions/: build.rs  clean.rs  client.rs  generate.rs  init.rs  schema.rs  test.rs  update.rs  utils.rs
src/backend/: builder.rs
src/builder/: cargo_toml.rs
tests/: cargo-odra.rs
tests/features/cargo-odra/: cargo-odra.feature  odra-backend.feature  odra-new.feature  odra-test.feature
