[package]
authors = ["Jakub Płaskonka kuba@odra.dev", "Krzysztof Pobiarżyn krzysztof@odra.dev", "Maciej Zieliński maciej@odra.dev"]
license = "MIT"
repository = "https://github.com/odradev/cargo-odra"
description = "A cargo utility that helps to create, manage and test your smart contracts written using Odra framework."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm", "smart contracts"]
name = "cargo-odra"
version = "0.0.5-cosmos"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive", "cargo"] }
convert_case = "0.5"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
cargo-generate = "0.15"
rm_rf = "0.6"
glob = "0.3"
cargo_toml = "0.11"
prettycli = "0.1"
chrono = "0.4"
thiserror = "1.0.37"

[[bin]]
name = "cargo-odra"
path = "bin/main.rs"
