[package]
authors = [
  "Jakub Płaskonka kuba@odra.dev",
  "Krzysztof Pobiarżyn krzysztof@odra.dev",
  "Maciej Zieliński maciej@odra.dev",
]
license = "MIT"
repository = "https://github.com/odradev/cargo-odra"
description = "A cargo utility that helps to create, manage and test your smart contracts written using Odra framework."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm", "smart contracts"]
name = "cargo-odra"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.4", features = ["derive", "cargo"] }
convert_case = "0.6"
toml = "0.7"
serde = "1.0"
serde_derive = "1.0"
cargo-generate = "0.18"
rm_rf = "0.6"
glob = "0.3"
cargo_toml = "0.15"
prettycli = "0.1"
chrono = "0.4"
thiserror = "1.0.37"
ureq = { version = "2.6.2", features = ["json"] }
regex = "1.7.3"
clap_complete_command = "0.5.1"

[[bin]]
name = "cargo-odra"
path = "bin/main.rs"
